2006-04-02  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: don't check for isnan function.
	* native/fdlibm/fdlibm.h: Always use the isnan macro.

2006-04-02  Raif S. Naffah  <raif@swiftdsl.com.au>

	* configure.ac: Added tools/jarsigner.sh to AC_CONFIG_FILES.
	* tools/Makefile.am: Generate jarsigner shell script.
	* tools/jarsigner.sh.in: New template.
	* tools/.cvsignore: Added jarsigner.sh.

2006-04-02  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/gnu/classpath/tools/jarsigner/HashUtils.java: Use GPL.
	* tools/gnu/classpath/tools/jarsigner/SFHelper.java: Likewise.
	* tools/gnu/classpath/tools/jarsigner/JarVerifier.java: Likewise.
	* tools/gnu/classpath/tools/jarsigner/JarSigner.java: Likewise.
	* tools/gnu/classpath/tools/jarsigner/Main.java: Likewise.
	Re-organised imports.

2006-04-01  Bernhard Rosenkraenzer  <bero@arklinux.org>

	PR classpath/25924:
	* java/awt/image/DirectColorModel.java (extractAndNormalizeSample):
	Handle case where alpha==0.

2006-04-02  Robert Schuster  <robertschuster@fsfe.org>

	PR #26676
	* javax/swing/text/Utilities.java:
	(getTabbedTextOffset): Added check to decrement pos not below zero,
	changed	'>' comparison to '>='.
	* javax/swing/text/WrappedPlainView.java:
	(lineHeight): New field.
	(calculateBreakPosition): Throw InternalError in catch block, removed
	unneeded brackets, use specific version of
	Utilities.getTabbedTextOffset.
	(paint): Set various properties neccessary for drawing.
	(WrappedLine.paint): Removed code to set field of outer class.
	(WrappedLine.modelToView): Removed unneeded expression from
	if-statement.
	(WrappedLine.viewToModel): Initialize end with endOffset - 1, removed
	-1 from return statement, copy only a subset into the Segment, removed
	special	handling of mark value - just return it, simplified
	incrementation of currLineStart.
	(WrappedLine.insertUpdate): Recalculate numLines, report preference
	change to parent view.
	(WrappedLine.removeUpdate): Dito.
