@@ -1,3 +1,8 @@
+2006-04-02  Mark Wielaard  <mark@klomp.org>
+
+	* tools/Makefile.am (bin_SCRIPTS): Renamed to jarsigner.sh.
+	(jarsigner): Removed.
+
 2006-04-02  Dalibor Topic  <robilad@kaffe.org>
 
 	* configure.ac: don't check for isnan function.
